--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,5 @@ librosa>=0.6.3,<0.9
 opencv_python>=4.2.0
 torchaudio
 https://github.com/pyannote/pyannote-audio/archive/develop.zip
+moviepy
+speechbrain
